--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,6 +17,10 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Run Python unit tests
+    - name: Run Python unit tests et pytest 
       run: python3 -m unittest test_calcul_unittest.py  #l'action qu'il execute sur la main a chaque push
 
+    - name: Run Pytest
+      run: |
+        pytest
+      
