--- a/.github/workflows/Run_Pytest_on_push.yml
+++ b/.github/workflows/Run_Pytest_on_push.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x  # Choisissez la version de Python que vous utilisez
+        python-version: '3.10'  # Choisissez la version de Python que vous utilisez
 
     - name: Install dependencies
       run: |
