--- a/.github/workflows/Run_Pytest_on_push.yml
+++ b/.github/workflows/Run_Pytest_on_push.yml
@@ -1,27 +1,24 @@
 name: Run Pytest on push
 
-on:
-  push:
-    branches:
-      - main  # ajustez la branche selon votre configuration
+on: push  # ajustez la branche selon votre configuration
 
 jobs:
   test:
     runs-on: ubuntu-latest  # Choisissez l'image selon vos besoins
-
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name : Checkout code
+      uses : actions/checkout@v2
+      
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Choisissez la version de Python que vous utilisez
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Ajustez cela en fonction de votre configuration
+            #pip install -r requirements.txt  # Ajustez cela en fonction de votre configuration
 
     - name: Run Pytest
       run: |
