--- a/.github/workflows/Run_Pytest_on_push.yml
+++ b/.github/workflows/Run_Pytest_on_push.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-            #pip install -r requirements.txt  # Ajustez cela en fonction de votre configuration
+        pip install -r requirements.txt  # Ajustez cela en fonction de votre configuration
 
     - name: Run Pytest
       run: |
