--- a/.github/workflows/Run_Pytest_on_push.yml
+++ b/.github/workflows/Run_Pytest_on_push.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install poetry
-        poetry install
+        # python -m pip install poetry
+        # poetry install
 
     - name: Run Pytest
       run: |
