--- a/.github/workflows/Run_Pytest_on_push.yml
+++ b/.github/workflows/Run_Pytest_on_push.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -U pytest
         # python -m pip install poetry
         # poetry install
 
