--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,6 +16,16 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+      - name: Install dependencies
+      run: |
+        
+        pip install -U pytest
+        # python -m pip install poetry
+        # poetry install
+        
+    - name: Run Pytest
+      run: |
+        pytest
 
     - name: Run Python unit tests et pytest 
       run: python3 -m unittest test_calcul_unittest.py  #l'action qu'il execute sur la main a chaque push
